# libkpeople

./: CMakeLists.txt  libkpeople_0.0.80.orig.tar.bz2.delta  libkpeople_0.0.80.orig.tar.bz2.id  libkpeople_0.1.0.orig.tar.bz2.delta  libkpeople_0.1.0.orig.tar.bz2.id  libkpeople_0.2.0.orig.tar.bz2.delta  libkpeople_0.2.0.orig.tar.bz2.id  libkpeople_0.2.1.orig.tar.bz2.delta  libkpeople_0.2.1.orig.tar.bz2.id  libkpeople_0.2.2.orig.tar.bz2.delta  libkpeople_0.2.2.orig.tar.bz2.id  libkpeople_0.3.0.orig.tar.bz2.delta  libkpeople_0.3.0.orig.tar.bz2.id
debian/: changelog  control  copyright  libkpeople-data.install  libkpeople-dev.install  libkpeople-plugins.install  libkpeople1.install  libkpeople1.symbols  libkpeople3.install  libkpeople3.symbols  libkpeople4.install  libkpeople4.symbols  libkpeoplewidgets4.install  libkpeoplewidgets4.symbols  rules  watch
debian/patches/: add-cmake-copying.patch  catch-crash.patch  library_startswith_soname.patch  series
po/: CMakeLists.txt
po/bs/: libkpeople.po
po/cs/: libkpeople.po
po/da/: libkpeople.po
po/de/: libkpeople.po
po/el/: libkpeople.po
po/fi/: libkpeople.po
po/fr/: libkpeople.po
po/hu/: libkpeople.po
po/ja/: libkpeople.po
po/lt/: libkpeople.po
po/nl/: libkpeople.po
po/pl/: libkpeople.po
po/pt/: libkpeople.po
po/pt_BR/: libkpeople.po
po/ro/: libkpeople.po
po/ru/: libkpeople.po
po/sk/: libkpeople.po
po/sl/: libkpeople.po
po/sv/: libkpeople.po
po/uk/: libkpeople.po
